[SYNCOPE-1641] added resources to match to purge propagation tasks API (#305)